@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 20XX-0X-XX  Release 7.36.2                                     ---
 ----------------------------------------------------------------------
 
+* add support for dbconcat -O (overwrite) - Chris McGregor
 * improved 'lc' -d and -m interactions with aircodes - Chris McGregor
 * fixed 'make bot' inverted face normals - Chris McGregor
 * fixed garbage_collect MGED command on Windows - Cliff Yapp
